# mastot

./: .gitignore  Makefile  README.md  pyproject.toml
mastot/: cli.py  modification.py  transcription.py
